--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,6 +104,8 @@ include_directories(
 
 ## Declare a cpp executable
 add_executable(txtexecutor
+  src/executors/flyto.cc
+  src/executors/flyfromto.cc
   src/txtexecutor.cc
 )
 
