--- a/package.xml
+++ b/package.xml
@@ -26,6 +26,7 @@
   <!-- Authors do not have to be maintianers, but could be -->
   <!-- Example: -->
   <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
+  <author email="tommy.persson@liu.se">Tommy Persson</author>
 
 
   <!-- The *_depend tags are used to specify dependencies -->
