--- a/package.xml
+++ b/package.xml
@@ -44,11 +44,13 @@
   <build_depend>roscpp</build_depend>
   <build_depend>lrs_srvs_tst</build_depend>
   <build_depend>lrs_srvs_exec</build_depend>
+  <build_depend>lrs_resource</build_depend>
   <build_depend>lrs_exec</build_depend>
   <build_depend>lrs_util_gs</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>lrs_srvs_tst</run_depend>
   <run_depend>lrs_srvs_exec</run_depend>
+  <run_depend>lrs_resource</run_depend>
   <run_depend>lrs_exec</run_depend>
   <run_depend>lrs_util_gs</run_depend>
 
