Adding dummy scan from above executor. Fixes #4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,6 +112,7 @@ add_executable(txtexecutor
   src/executors/flyfromto.cc
   src/executors/flywaypoints.cc
   src/executors/movearm.cc
+  src/executors/scanfromabove.cc
   src/txtexecutor.cc
 )
 
