--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ project(lrs_exec_txt)
 find_package(catkin REQUIRED COMPONENTS
   lrs_srvs_tst
   lrs_srvs_exec
+  lrs_srvs_wdb
+  lrs_wdb
   lrs_resource
   lrs_exec
   lrs_util_gs
