Adding executor for drive-to. Fixes #6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,6 +121,7 @@ add_executable(txtexecutor
   src/executors/movearm.cc
   src/executors/scangroundsingle.cc
   src/executors/inairgoal.cc
+  src/executors/driveto.cc
   src/txtexecutor.cc
 )
 
