Adding executor for leashing. Fixes #7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,6 +122,7 @@ add_executable(txtexecutor
   src/executors/scangroundsingle.cc
   src/executors/inairgoal.cc
   src/executors/driveto.cc
+  src/executors/leashing.cc
   src/txtexecutor.cc
 )
 
