--- a/package.xml
+++ b/package.xml
@@ -42,6 +42,7 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>lrs_msgs_common</build_depend>
   <build_depend>lrs_srvs_tst</build_depend>
   <build_depend>lrs_srvs_exec</build_depend>
   <build_depend>lrs_srvs_wdb</build_depend>
@@ -51,6 +52,7 @@
   <build_depend>lrs_util_gs</build_depend>
   <build_depend>lrs_common</build_depend>
   <run_depend>roscpp</run_depend>
+  <run_depend>lrs_msgs_common</run_depend>
   <run_depend>lrs_srvs_tst</run_depend>
   <run_depend>lrs_srvs_exec</run_depend>
   <run_depend>lrs_resource</run_depend>
