--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,6 +113,7 @@ include_directories(
 
 ## Declare a cpp executable
 add_executable(txtexecutor
+  src/executors/yaw.cc
   src/executors/flyto.cc
   src/executors/flyfromto.cc
   src/executors/lookat.cc
