Adding OperatorControl executor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,6 +113,7 @@ include_directories(
 
 ## Declare a cpp executable
 add_executable(txtexecutor
+  src/executors/operator_control.cc
   src/executors/stop_video_recording.cc
   src/executors/start_video_recording.cc
   src/executors/yaw.cc
