--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(lrs_exec_txt)
+project(lrs_rover)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -std=c++0x")
@@ -116,7 +116,7 @@ include_directories(
 # )
 
 ## Declare a cpp executable
-add_executable(txtexecutor
+add_executable(GRAexecutor
   src/executors/artva_filter.cc
   src/executors/rescue_video_recording.cc
   src/executors/inairtest.cc
@@ -143,12 +143,12 @@ add_executable(txtexecutor
   src/executors/inairgoal.cc
   src/executors/driveto.cc
   src/executors/leashing.cc
-  src/txtexecutor.cc
+  src/GRAexecutor.cc
   )
 
 find_library(UUID_LIB uuid)
 
-target_link_libraries(txtexecutor
+target_link_libraries(GRAexecutor
   ${UUID_LIB}
   ${catkin_LIBRARIES}
 )
